--- a/app/src/main/res/layout/ar_challenge_layout.xml
+++ b/app/src/main/res/layout/ar_challenge_layout.xml
@@ -35,7 +35,7 @@
             android:fontFamily="@font/claritycity_bold"
             android:text=""
             android:textColor="#4B3B30"
-            android:textSize="20sp" />
+            android:textSize="@dimen/disclaimer_title_text_size" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 
@@ -103,13 +103,15 @@
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
-            <TextView
+            <ImageView
+                android:id="@+id/ar_challenge_screen_trail_icon"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:background="@drawable/wild_about_twlight_icon"
                 android:gravity="center_horizontal" />
 
             <TextView
+                android:id="@+id/ar_challenge_screen_poi_completed_details"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="3dp"
