--- a/app/src/main/res/layout/ar_layout.xml
+++ b/app/src/main/res/layout/ar_layout.xml
@@ -5,7 +5,7 @@
     android:id="@+id/arLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ARCoreActivity">
+    tools:context=".view.arcore.ARCoreActivity">
 
     <androidx.fragment.app.FragmentContainerView
 
