--- a/app/src/main/res/layout/my_achievements_layout.xml
+++ b/app/src/main/res/layout/my_achievements_layout.xml
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/my_achievements_screen_backButton" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/my_achievementLayout"
+        android:id="@+id/achievementLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
@@ -50,62 +50,211 @@
         android:paddingBottom="5dp"
         app:layout_constraintTop_toBottomOf="@+id/my_achievements_screen_title_border_line">
 
-        <ImageView
-            android:id="@+id/my_achievement_icon_one"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/achievements_image_adapter"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toStartOf="@+id/achievement_icon_two_fl"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/profile_screen_achievement_image_arrangment_adapter" />
+
+
+        <FrameLayout
+            android:id="@+id/achievement_icon_one_fl"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginStart="30dp"
-            android:src="@drawable/aardvark_achievement_icon"
-            app:layout_constraintEnd_toStartOf="@+id/my_achievement_icon_two"
+            app:layout_constraintEnd_toStartOf="@+id/achievement_icon_two_fl"
             app:layout_constraintHorizontal_bias="0.8"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
 
+            <ImageView
+                android:id="@+id/my_achievement_icon_one"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/aardvark_achievement_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/my_achievement_icon_one_lock_iv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/lock_achievement"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </FrameLayout>
 
         <ImageView
-            android:id="@+id/my_achievement_icon_two"
+            android:id="@+id/achievement_icon_two1"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:src="@drawable/lock_achievement"
-            app:layout_constraintEnd_toStartOf="@+id/my_achievement_icon_three"
+            android:visibility="gone"
+            app:layout_constraintEnd_toStartOf="@+id/achievement_icon_three_fl"
             app:layout_constraintHorizontal_bias="0.8"
-            app:layout_constraintStart_toEndOf="@+id/my_achievement_icon_one"
+            app:layout_constraintStart_toEndOf="@+id/achievement_icon_one_fl"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <FrameLayout
+            android:id="@+id/achievement_icon_two_fl"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            app:layout_constraintEnd_toStartOf="@+id/achievement_icon_three_fl"
+            app:layout_constraintHorizontal_bias="0.8"
+            app:layout_constraintStart_toEndOf="@+id/achievement_icon_one_fl"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/my_achievement_icon_two"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/aardvark_achievement_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/my_achievement_icon_two_lock_iv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/lock_achievement"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </FrameLayout>
 
         <ImageView
-            android:id="@+id/my_achievement_icon_three"
+            android:id="@+id/achievement_icon_three1"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:src="@drawable/lock_achievement"
-            android:visibility="visible"
-            app:layout_constraintEnd_toStartOf="@+id/my_achievement_icon_four"
+            android:visibility="gone"
+            app:layout_constraintEnd_toStartOf="@+id/achievement_icon_four_fl"
             app:layout_constraintHorizontal_bias="0.8"
-            app:layout_constraintStart_toEndOf="@+id/my_achievement_icon_two"
+            app:layout_constraintStart_toEndOf="@+id/achievement_icon_two_fl"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <FrameLayout
+            android:id="@+id/achievement_icon_three_fl"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            app:layout_constraintEnd_toStartOf="@+id/achievement_icon_four_fl"
+            app:layout_constraintHorizontal_bias="0.8"
+            app:layout_constraintStart_toEndOf="@+id/achievement_icon_two_fl"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/my_achievement_icon_three"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/aardvark_achievement_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/my_achievement_icon_three_lock_iv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/lock_achievement"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </FrameLayout>
 
         <ImageView
-            android:id="@+id/my_achievement_icon_four"
+            android:id="@+id/achievement_icon_four1"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:src="@drawable/lock_achievement"
-            app:layout_constraintEnd_toStartOf="@+id/my_achievement_icon_five"
+            android:visibility="gone"
+            app:layout_constraintEnd_toStartOf="@+id/achievement_icon_four_fl"
             app:layout_constraintHorizontal_bias="0.8"
-            app:layout_constraintStart_toEndOf="@+id/my_achievement_icon_three"
+            app:layout_constraintStart_toEndOf="@+id/achievement_icon_three_fl"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <FrameLayout
+            android:id="@+id/achievement_icon_four_fl"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            app:layout_constraintEnd_toStartOf="@+id/achievement_icon_five_fl"
+            app:layout_constraintHorizontal_bias="0.8"
+            app:layout_constraintStart_toEndOf="@+id/achievement_icon_three_fl"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/my_achievement_icon_four"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/aardvark_achievement_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/my_achievement_icon_four_lock_iv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/lock_achievement"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </FrameLayout>
 
         <ImageView
-            android:id="@+id/my_achievement_icon_five"
+            android:id="@+id/achievement_icon_five1"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginEnd="30dp"
             android:src="@drawable/lock_achievement"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.8"
-            app:layout_constraintStart_toEndOf="@+id/my_achievement_icon_four"
+            app:layout_constraintStart_toEndOf="@+id/achievement_icon_four_fl"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <FrameLayout
+            android:id="@+id/achievement_icon_five_fl"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.8"
+            app:layout_constraintStart_toEndOf="@+id/achievement_icon_four_fl"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/my_achievement_icon_five"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/aardvark_achievement_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/my_achievement_icon_five_lock_iv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/lock_achievement"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </FrameLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -118,7 +267,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:listitem="@layout/my_achievements_adapter"
-        app:layout_constraintTop_toBottomOf="@+id/my_achievementLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/achievementLayout" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:visibility="gone"
@@ -128,7 +277,7 @@
         android:layout_margin="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/my_achievementLayout">
+        app:layout_constraintTop_toBottomOf="@+id/achievementLayout">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
