--- a/app/src/main/res/layout/quiz_challenge_question_activity.xml
+++ b/app/src/main/res/layout/quiz_challenge_question_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -55,25 +56,36 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <!--   <com.google.android.youtube.player.YouTubePlayerView
-                              android:id="@+id/ytPlayer"
-                              android:layout_width="match_parent"
-                              android:layout_height="wrap_content"
-                              android:layout_marginStart="30dp"
-                              android:layout_marginTop="10dp"
-                              android:layout_marginEnd="30dp"
-                              android:visibility="gone" />-->
-                <ImageView
-                    android:id="@+id/questionImage"
+
+
+                <FrameLayout
+
+                    android:id="@+id/imageFrameLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:src="@drawable/poi_photo" />
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/questionImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:src="@drawable/poi_photo" />
+
+                    <ProgressBar
+                        android:id="@+id/quiz_challenge_screen_loader"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </FrameLayout>
 
                 <TextView
                     android:id="@+id/questionText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/questionImage"
+                    android:layout_below="@+id/imageFrameLayout"
                     android:layout_marginTop="15dp"
                     android:fontFamily="@font/dinish_regular"
                     android:gravity="center"
@@ -110,7 +122,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/dinish_regular"
                             android:gravity="center_horizontal"
-                            android:text="Futaki Takajiro"
+
                             android:textColor="#4B3B30"
                             android:textSize="@dimen/trail_tutorial_sub_text_size" />
 
@@ -134,7 +146,7 @@
                             android:paddingTop="15dp"
                             android:paddingEnd="20dp"
                             android:paddingBottom="15dp"
-                            android:text="Futaki Takajiro"
+
                             android:textColor="#4B3B30"
                             android:textSize="@dimen/trail_tutorial_sub_text_size" />
                     </androidx.appcompat.widget.LinearLayoutCompat>
@@ -156,7 +168,7 @@
                             android:paddingTop="15dp"
                             android:paddingEnd="20dp"
                             android:paddingBottom="15dp"
-                            android:text="Futaki Takajiro"
+
                             android:textColor="#4B3B30"
                             android:textSize="@dimen/trail_tutorial_sub_text_size" />
                     </androidx.appcompat.widget.LinearLayoutCompat>
