--- a/app/src/main/res/layout/rewards_screen_qr_scan_layout.xml
+++ b/app/src/main/res/layout/rewards_screen_qr_scan_layout.xml
@@ -63,6 +63,7 @@
         android:text="Proceed to the Information Counter at Anthology to claim your reward."
         android:textColor="#4B3B30"
         android:textSize="@dimen/challenge_begin_screen_rewards_text_size"
+        android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@id/rewards_details_screen_info"
         app:layout_constraintStart_toEndOf="@id/reward_qr_details_screen_back_button"
         app:layout_constraintTop_toBottomOf="@+id/reward_qr_details_screen_back_button" />
@@ -71,19 +72,18 @@
         android:id="@+id/iv_reward_details_image"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_marginTop="26dp"
         android:contentDescription="rewards"
         android:scaleType="fitXY"
-
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/rewards_details_screen_info"
         app:layout_constraintStart_toEndOf="@id/reward_qr_details_screen_back_button"
-        app:layout_constraintTop_toBottomOf="@+id/txt_qr_details_message" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txt_qr_details_message_code"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/claritycity_bold"
         android:gravity="center_horizontal"
         android:text="12345ABC"
@@ -106,6 +106,8 @@
         app:layout_constraintEnd_toStartOf="@id/rewards_details_screen_info"
         app:layout_constraintStart_toEndOf="@id/reward_qr_details_screen_back_button"
         app:layout_constraintTop_toBottomOf="@+id/txt_qr_details_message_code" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
