--- a/app/src/main/res/layout/selfie_challenge_level_layout.xml
+++ b/app/src/main/res/layout/selfie_challenge_level_layout.xml
@@ -68,7 +68,7 @@
             android:layout_marginTop="15dp"
             android:fontFamily="@font/claritycity_bold"
             android:gravity="center"
-            android:text="Supertree Grove"
+
             android:textColor="#4B3B30"
             android:textSize="16sp" />
 
@@ -151,13 +151,15 @@
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
-                <TextView
+                <ImageView
+                    android:id="@+id/selfie_challenge_screen_trail_icon"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:background="@drawable/wild_about_twlight_icon"
+                    android:src="@drawable/wild_about_twlight_icon"
                     android:gravity="center_horizontal" />
 
                 <TextView
+                    android:id="@+id/selfie_challenge_screen_poi_completed_details"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginStart="3dp"
