--- a/app/src/main/res/layout/trail_list_adapter.xml
+++ b/app/src/main/res/layout/trail_list_adapter.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:id="@+id/list_adapter_constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -101,9 +100,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|end"
-
-
-                android:background="@drawable/exit_navigation_mode" />
+                android:src="@drawable/exit_navigation_mode" />
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.appcompat.widget.LinearLayoutCompat>
 
