--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -5,7 +5,7 @@
         <item name="android:windowBackground">@drawable/splash_screen_new</item>
 
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowFullscreen">false</item>
         <item name="android:navigationBarColor">@color/black</item>
 
     </style>
